--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
+    "dev": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -52,7 +53,7 @@
     "@types/react": "~18.2.45",
     "typescript": "~5.1.3",
     "eslint": "^8.19.0",
-    "eslint-config-expo": "~6.0.0"
+    "eslint-config-expo": "^7.1.2"
   },
   "private": true
 }
