--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start",
-    "dev": "expo start",
+    "start": "npx expo start",
+    "dev": "npx expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "lint": "expo lint"
+    "android": "npx expo start --android",
+    "ios": "npx expo start --ios",
+    "web": "npx expo start --web",
+    "lint": "npx expo lint"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
-    "@react-navigation/elements": "^2.3.8",
+    "@react-navigation/elements": "^1.3.30",
     "@react-navigation/native": "^6.1.17",
     "@supabase/supabase-js": "^2.39.0",
     "expo": "~50.0.14",
