--- a/package.json
+++ b/package.json
@@ -3,57 +3,57 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "npx expo start",
-    "dev": "npx expo start",
+    "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "npx expo start --android",
-    "ios": "npx expo start --ios",
-    "web": "npx expo start --web",
-    "lint": "npx expo lint"
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "lint": "expo lint"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@react-navigation/bottom-tabs": "^6.5.20",
-    "@react-navigation/elements": "^1.3.30",
-    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/bottom-tabs": "^7.3.10",
+    "@react-navigation/elements": "^2.3.8",
+    "@react-navigation/native": "^7.1.6",
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "@supabase/supabase-js": "^2.39.0",
-    "expo": "~50.0.14",
-    "expo-blur": "~12.9.2",
-    "expo-camera": "~14.1.1",
-    "expo-constants": "~15.4.6",
-    "expo-document-picker": "~11.10.1",
-    "expo-font": "~11.10.0",
-    "expo-haptics": "~12.8.1",
-    "expo-image": "~1.10.6",
-    "expo-image-picker": "~14.7.1",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.4.8",
-    "expo-secure-store": "~12.8.1",
-    "expo-splash-screen": "~0.26.4",
-    "expo-status-bar": "~1.11.1",
-    "expo-symbols": "~1.3.0",
-    "expo-system-ui": "~2.9.4",
-    "expo-web-browser": "~12.8.2",
+    "expo": "~52.0.30",
+    "expo-blur": "~14.1.5",
+    "expo-camera": "~16.0.8",
+    "expo-constants": "~17.1.6",
+    "expo-document-picker": "~12.1.1",
+    "expo-font": "~13.3.1",
+    "expo-haptics": "~14.1.4",
+    "expo-image": "~2.2.0",
+    "expo-image-picker": "~16.1.0",
+    "expo-linking": "~7.1.5",
+    "expo-router": "~4.0.17",
+    "expo-secure-store": "~14.1.1",
+    "expo-splash-screen": "~0.30.9",
+    "expo-status-bar": "~2.2.3",
+    "expo-symbols": "~0.4.5",
+    "expo-system-ui": "~5.0.8",
+    "expo-web-browser": "~14.1.6",
     "lucide-react-native": "^0.344.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.73.6",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.3",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-svg": "14.1.0",
-    "react-native-web": "~0.19.6",
-    "react-native-webview": "13.6.4",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.8.0",
+    "react-native-web": "~0.20.0",
+    "react-native-webview": "13.13.5",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
-    "typescript": "~5.1.3",
-    "eslint": "^8.19.0",
-    "eslint-config-expo": "^7.1.2"
+    "@babel/core": "^7.25.2",
+    "@types/react": "~19.0.10",
+    "typescript": "~5.8.3",
+    "eslint": "^9.25.0",
+    "eslint-config-expo": "~9.2.0"
   },
   "private": true
 }
