--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
+    "dev": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -20,7 +21,7 @@
     "expo": "~52.0.30",
     "expo-blur": "~14.1.5",
     "expo-camera": "~16.0.8",
-    "expo-constants": "~17.1.6",
+    "expo-constants": "~17.0.8",
     "expo-document-picker": "~12.1.1",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
